// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fail delete member (500 status code) 1`] = `
"<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <ul class=\\"errors-panel\\">
      <li>Fail delete member</li>
    </ul>
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new member form</button>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
            <table>
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Name</th>
                  <th>Email</th>
                  <th>Is superuser?</th>
                  <th></th>
                </tr>
              </thead>
              <tbody>
                <tr class=\\"\\">
                  <td>1</td>
                  <td>John Smith#1</td>
                  <td>john.smith.1@test.com</td>
                  <td class=\\"text-center\\">No</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"1\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"1\\"> Delete </button>
                  </td>
                </tr>
              </tbody>
            </table>
            <!--if-->
            <!--MembersTable-->
            <!--default-->
            <!--if-->
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
          </div>
        </div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
<!--ActivePageContainer-->"
`;

exports[`fail delete member 1`] = `
"<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <ul class=\\"errors-panel\\">
      <li>Can't delete member</li>
    </ul>
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new member form</button>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
            <table>
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Name</th>
                  <th>Email</th>
                  <th>Is superuser?</th>
                  <th></th>
                </tr>
              </thead>
              <tbody>
                <tr class=\\"\\">
                  <td>1</td>
                  <td>John Smith#1</td>
                  <td>john.smith.1@test.com</td>
                  <td class=\\"text-center\\">No</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"1\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"1\\"> Delete </button>
                  </td>
                </tr>
              </tbody>
            </table>
            <!--if-->
            <!--MembersTable-->
            <!--default-->
            <!--if-->
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
          </div>
        </div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
<!--ActivePageContainer-->"
`;
